# robot

./: CMakeLists.txt  package.xml
inc/: Camera.h  Common.h  Demo.h  Maestro.h  SenseReact.h  SerialCom.hpp  Xmega.h
launch/: camera_testing.launch  demo.launch  maestro_testing.launch  motor_testing.launch  nav_to_bin_testing.launch  nav_to_pile_testing.launch  obstacle_avoidance.launch  servo_characterization.launch
msg/: IR.msg  color.msg  controller.msg  motor.msg  object.msg  pile.msg  sensors.msg
src/: 1q  Camera.cpp  Demo.cpp  Maestro.cpp  MaestroSubscriber.cpp  ReadADC.cpp  RedDetect.cpp  SenseReact.cpp  SerialCom.cpp  Server.py  ServoExample.cpp  ServoPublisher.cpp  Shutdown.cpp  SimpleServo.cpp  VidSURF.cpp  Wander.cpp  Xmega.cpp
test/: CalibrateCam.cpp  Capture.cpp  CharServo.cpp  FindColor.cpp  NavToColor.cpp  NavToObject.cpp  RedDetect.cpp  SURF.cpp  SenseReact.cpp  SerialTest.cpp  SimpleServo.cpp  TestMaestro.cpp  VidSURF.cpp  XmegaTest.cpp
