<?xml version="1.0"?>
<package>
  <name>Robot</name>
  <version>0.0.0</version>
  <description>The Robot package</description>

 
  <maintainer email="nc61@ufl.edu">Nick</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/nc61/Robot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>fcntl</build_depend>
  <build_depend>stdio</build_depend> 
  <build_depend>unistd</build_depend>
  <build_depend>termios</build_depend>
  
<export>

  </export>
</package>
