<?xml version="1.0"?>
<package>
  <name>robot</name>
  <version>0.0.0</version>
  <description>The Robot package</description>

 
  <maintainer email="nc61@ufl.edu">Nick</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/nc61/Robot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>SerialStream</build_depend>
  <build_depend>string</build_depend>
  <build_depend>iostream</build_depend>
  <build_depend>stdlib</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>SerialStream</run_depend>
</package>
